@@ -15,6 +15,7 @@
 - FIX: IvyDE does not save "Configurations" and "Types" field values for "Retrive" tab  (IVYDE-142) (thanks to Daniel Becheanu)
 - FIX: Retrieve after resolve task fails because of wrong resolve configuration (IVYDE-140) (thanks to Daniel Becheanu)
 - FIX: Conversion from "file:" to "project:" fails (IVYDE-143) (thanks to Will Gorman)
+- FIX: The decorators can throw a NPE at startup (IVYDE-133)
 
   version 2.0.0 beta1
 ==========================
